<resources>
    <string name="app_name">ZeroWaste</string>
    <string name="home">Home</string>
    <string name="menu">Menu</string>
    <string name="liste_title">My fridge</string>
    <string name="ajouter_un_article">Add an item</string>
    <string name="saisir_le_code_barre">Enter the barcode</string>
    <string name="valider">Validate</string>
    <string name="nom_article">Item name</string>
    <string name="quantite">Quantity</string>
    <string name="ingredients">Ingredients</string>
    <string name="annuler">Cancel</string>
    <string name="ean_article">Ean</string>
    <string name="marque">Brand</string>
    <string name="date_peremption_question">What is the expiration date?</string>
    <string name="until_notif_question">How long before the expiration date do you want to receive a notification?</string>
    <string name="un_jour">1 day</string>
    <string name="trois_jours">3 days</string>
    <string name="sept_jours">7 days</string>
    <string name="about">About</string>
    <string name="product_not_found">Product not found</string>
    <string name="product_retrieve_error">Error retrieving product</string>
    <string name="about_info">Application created by Sabri and Evan</string>
    <string name="expiry_date">Expiry date</string>
    <string name="barcode">Barcode</string>
</resources>